--- a/code/readme
+++ b/code/readme
@@ -23,3 +23,35 @@ currentValue == 4 改成currentValue == 0
 当鼠标放到图片上取消滚动事件， 移出后再添加进去，但是例子不可以直接用
 考虑jquery 事件
 https://api.jquery.com/mouseover/
+
+	$( "#zoom_01" ).mouseover(function() {
+		stopTimer();
+	}).mouseout(function() {
+		startTimer();
+	});
+	
+5 但是没有效果, 考虑是不是添加的对象不对，发现应该是.zoomContainer
+6 还是不可以，那么如果直接添加到 html上面呢 onmouseover="stoptupian()" onmouseout="dongqilai()" 也不可以
+7 查看源代码 或者网上搜
+https://stackoverflow.com/questions/45770408/elevatezoom-mouse-over-detection
+这个人跟我们同样问题
+
+但最后查到
+http://jsfiddle.net/hxqrjL45/
+$("#zoom_me").elevateZoom({
+    zoomType : "lens", 
+    lensShape : "round", 
+    lensSize : 300,
+    onZoomedImageLoaded:function(z){
+    
+ So 我们将代码改成
+ onZoomedImageLoaded:function(z){
+	$( ".zoomContainer" ).on( "mouseover", stopTimer );
+	$( ".zoomContainer" ).on( "mouseout", startTimer );   
+}
+
+test3.js
+================
+    
+
+
